<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Bank.Bank_Detail">




    <RelativeLayout
        android:id="@+id/relative_bank"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:background="@color/darkyellow">


    <RelativeLayout
        android:id="@+id/arrow_bank_detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


    <ImageView

            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/arrow_back" />
    </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bank_detail"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black1"
            android:textSize="18dp" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/add_success_popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include layout="@layout/add_sucessfully_popup"/>

    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/banktname_text_input"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="@dimen/_50sdp"
        app:boxCornerRadiusTopEnd="@dimen/_50sdp"
        android:textColorHint="@color/black1"
        app:boxStrokeColor="#000000"
        app:boxCornerRadiusBottomStart="@dimen/_50sdp"

        app:boxCornerRadiusTopStart="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_edit_text"
            android:layout_width="match_parent"
            android:textSize="@dimen/_11sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/black1"


            android:hint="Bank Name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Account_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="@dimen/_50sdp"
        app:boxCornerRadiusTopEnd="@dimen/_50sdp"
        android:textColorHint="@color/black1"
        app:boxStrokeColor="#000000"
        app:boxCornerRadiusBottomStart="@dimen/_50sdp"

        app:boxCornerRadiusTopStart="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_edit_mobile"
            android:layout_width="match_parent"
            android:textSize="@dimen/_11sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/black1"




            android:hint="@string/bank_holder" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/A_number_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="@dimen/_50sdp"
        app:boxCornerRadiusTopEnd="@dimen/_50sdp"
        android:textColorHint="@color/black1"
        app:boxStrokeColor="#000000"
        app:boxCornerRadiusBottomStart="@dimen/_50sdp"

        app:boxCornerRadiusTopStart="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_edit_email"
            android:layout_width="match_parent"
            android:textSize="@dimen/_11sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/black1"




            android:hint="@string/bank_number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ifsc_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="@dimen/_50sdp"
        app:boxCornerRadiusTopEnd="@dimen/_50sdp"
        android:textColorHint="@color/black1"
        app:boxStrokeColor="#000000"
        app:boxCornerRadiusBottomStart="@dimen/_50sdp"

        app:boxCornerRadiusTopStart="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_edit_address"
            android:layout_width="match_parent"
            android:textSize="@dimen/_11sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/black1"




            android:hint="@string/ifsc" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

    <TextView
        android:id="@+id/t_add_acc"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/rectangle_yellow"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/Add_bank"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black1"

        android:textSize="18sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_116sdp"
            android:layout_marginVertical="@dimen/_10sdp"


            android:layout_marginHorizontal="@dimen/_20sdp"
            android:elevation="2dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/white"

            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_15sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/icon_bank"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Kotak Mahindra Bank"
                            android:textColor="@color/black1"
                            android:fontFamily="@font/poppins"
                            android:layout_marginTop="5dp"


                            android:textSize="@dimen/_13sdp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ankur Saxena"
                            android:textColor="@color/grey6"
                            android:layout_marginLeft="@dimen/_2sdp"
                            android:fontFamily="@font/poppins"


                            android:textSize="@dimen/_13sdp"/><TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4003830171874018"
                        android:textColor="@color/grey6"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:fontFamily="@font/poppins"


                        android:textSize="@dimen/_13sdp"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="KKBK008521"
                                android:textColor="@color/grey6"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:fontFamily="@font/poppins"


                                android:textSize="@dimen/_13sdp"/>

                            <ImageView
                                android:id="@+id/write_edit1"
                                android:layout_width="@dimen/_18sdp"
                                android:layout_height="@dimen/_18sdp"
                                android:layout_alignParentEnd="true"

                                android:src="@drawable/write_icon" />
                        </RelativeLayout>
                    </LinearLayout>




                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rl_bank_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone"
            tools:listitem="@layout/bank_card">

        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>







</LinearLayout>