<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
   >




    <RelativeLayout
        android:id="@+id/relative_bank"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:background="@color/darkyellow">

        <ImageView
            android:id="@+id/arrow_bank_detail_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins"
            android:text="Bank Details Edit"
            android:textColor="@color/black1"
            android:textSize="18dp" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/add_success_popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include layout="@layout/add_sucessfully_popup"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/banktname_text_input"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/_50sdp"
            app:boxCornerRadiusTopEnd="@dimen/_50sdp"
            android:textColorHint="@color/black1"

            app:hintTextColor="@color/black1"
            app:boxStrokeColor="#000000"
            app:boxCornerRadiusBottomStart="@dimen/_50sdp"

            app:boxCornerRadiusTopStart="@dimen/_50sdp"
            android:layout_margin="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_edit_text"
                android:layout_width="match_parent"
                android:textSize="@dimen/_11sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/black1"



                android:hint="Bank Name" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Account_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/_50sdp"
            app:boxCornerRadiusTopEnd="@dimen/_50sdp"
            android:textColorHint="@color/black1"
            app:boxStrokeColor="#000000"
            app:boxCornerRadiusBottomStart="@dimen/_50sdp"

            app:boxCornerRadiusTopStart="@dimen/_50sdp"
            android:layout_margin="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_edit_mobile"
                android:layout_width="match_parent"
                android:textSize="@dimen/_11sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/black1"



                android:hint="@string/bank_holder" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/A_number_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/_50sdp"
            app:boxCornerRadiusTopEnd="@dimen/_50sdp"
            android:textColorHint="@color/black1"
            app:boxStrokeColor="#000000"
            app:boxCornerRadiusBottomStart="@dimen/_50sdp"

            app:boxCornerRadiusTopStart="@dimen/_50sdp"
            android:layout_margin="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_edit_email"
                android:layout_width="match_parent"
                android:textSize="@dimen/_11sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/black1"



                android:hint="@string/bank_number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ifsc_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/_50sdp"
            app:boxCornerRadiusTopEnd="@dimen/_50sdp"
            android:textColorHint="@color/black1"
            app:boxStrokeColor="#000000"
            app:boxCornerRadiusBottomStart="@dimen/_50sdp"

            app:boxCornerRadiusTopStart="@dimen/_50sdp"
            android:layout_margin="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_edit_address"
                android:layout_width="match_parent"
                android:textSize="@dimen/_11sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/black1"



                android:hint="@string/ifsc" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/t_save"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/rectangle_yellow"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="Save"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black1"

        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
